# WEB_HW_14

./: docker-compose.yml  main.py  pyproject.toml  test.sqlite
docs/source/: conf.py
migration/: env.py
migration/versions/: 8b20482aebb1_init.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16390  16393  16403  16405  16412  16414  16416  16424  16425  16432  16433  16435  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  (+8 more)
postgres-data/global/: 1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
postgres-data/pg_xact/: 0000
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py  roles.py
tests/: conftest.py  test_e2e_auth.py  test_unit_repository_contacts.py
